--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div id="wrapper">
     <header>
         <div id="page-banner">
+            <!-- this is a comment -->
             <h1 class="title">Bookorama</h1>
             <p>Books for Ninjas</p>
             <form id="search-books">
