--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <!-- this is a comment -->
             <h1 class="title">Bookorama</h1>
             <p>Books for Ninjas</p>
+            <a href="http://www.thenetninja.co.uk">the net ninja</a>
             <form id="search-books">
                 <input type="text" placeholder="Search books..." />
             </form>
